build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:31: error: cannot find symbol
import com.google.android.gms.auth.api.signin.GoogleSignIn;
                                             ^
  symbol:   class GoogleSignIn
  location: package com.google.android.gms.auth.api.signin
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:32: error: cannot find symbol
import com.google.android.gms.auth.api.signin.GoogleSignInClient;
                                             ^
  symbol:   class GoogleSignInClient
  location: package com.google.android.gms.auth.api.signin
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:57: error: cannot find symbol
    private GoogleSignInClient mGoogleSignInClient;
            ^
  symbol:   class GoogleSignInClient
  location: class ProfileFragment
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:82: error: cannot find symbol
        mGoogleSignInClient = GoogleSignIn.getClient(requireActivity(), gso);
                              ^
  symbol:   variable GoogleSignIn
  location: class ProfileFragment
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

[Incubating] Problems report is available at: file:///D:/Documents/GitHub/FoodAid-MAD-Project/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:31: error: cannot find symbol
  import com.google.android.gms.auth.api.signin.GoogleSignIn;
                                               ^
    symbol:   class GoogleSignIn
    location: package com.google.android.gms.auth.api.signin
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:32: error: cannot find symbol
  import com.google.android.gms.auth.api.signin.GoogleSignInClient;
                                               ^
    symbol:   class GoogleSignInClient
    location: package com.google.android.gms.auth.api.signin
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:57: error: cannot find symbol
      private GoogleSignInClient mGoogleSignInClient;
              ^
    symbol:   class GoogleSignInClient
    location: class ProfileFragment
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java:82: error: cannot find symbol
          mGoogleSignInClient = GoogleSignIn.getClient(requireActivity(), gso);
                                ^
    symbol:   variable GoogleSignIn
    location: class ProfileFragment
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\ProfileFragments\ProfileFragment.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
18 actionable tasks: 1 executed, 17 up-to-date
